# DataPulse

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md
backend/: pyproject.toml
backend/src/datapulse_api/: __init__.py  main.py
backend/src/datapulse_api/api/: __init__.py  cleaning.py  files.py  health.py  sessions.py  templates.py
backend/src/datapulse_api/core/: database.py
backend/src/datapulse_api/models/: __init__.py  cleaning.py  file_upload.py  quality.py  report.py  sessions.py  structure_detection.py  templates.py
backend/src/datapulse_api/services/: cleaned_csv_export.py  cleaning_engine.py  (+9 more)
backend/tests/: test_cleaned_csv_export_endpoint.py  test_cleaned_csv_export_service.py  test_cleaning_capabilities.py  test_cleaning_engine_service.py  test_cleaning_models.py  test_cleaning_preview_endpoint.py  test_cleaning_preview_models.py  test_cleaning_report_endpoint.py  test_cleaning_report_service.py  test_cors.py  test_csv_structure_detection_service.py  test_data_quality_endpoint.py  test_data_quality_service.py  test_excel_sheet_preview_service.py  test_excel_structure_discovery_service.py  test_file_upload_endpoint.py  test_file_upload_models.py  test_file_validation_service.py  test_health.py  test_quality_models.py  test_report_html.py  test_report_models.py  test_saved_session_report.py  test_session_models.py  test_session_repository.py  test_sessions_endpoint.py  test_structure_detection_endpoint.py  test_structure_detection_models.py  test_template_repository.py  test_templates_endpoint.py  test_workflow_template_models.py
(+35 files in other folders)
